@@ -1,7 +1,9 @@
 package city.sane.wot.binding.akka;
 
 import java.io.Serializable;
-import java.util.*;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
 
 /**
  * This class contains message types for <a href="https://en.wikipedia.org/wiki/Create,_read,_update_and_delete">CRUD operations</a>.
@@ -12,14 +14,14 @@ public class CrudMessages {
     }
 
     abstract static class Failed implements Serializable {
-        public final ArrayList<String> errors;
+        public final List<String> errors;
 
-        public Failed(ArrayList<String> errors) {
+        public Failed(List<String> errors) {
             this.errors = errors;
         }
 
         public Failed(Throwable e) {
-            this(new ArrayList(List.of(e.toString())));
+            this(Arrays.asList(e.toString()));
         }
     }
 
@@ -28,15 +30,15 @@ public class CrudMessages {
     }
 
     public static class RespondGetAll<K extends Serializable, E extends Serializable> implements Serializable {
-        public final HashMap<K, E> entities;
+        public final Map<K, E> entities;
 
-        public RespondGetAll(HashMap<K, E> entities) {
+        public RespondGetAll(Map<K, E> entities) {
             this.entities = entities;
         }
     }
 
     public static class GetAllFailed extends Failed {
-        public GetAllFailed(ArrayList<String> errors) {
+        public GetAllFailed(List<String> errors) {
             super(errors);
         }
 
@@ -63,7 +65,7 @@ public class CrudMessages {
     }
 
     public static class GetFailed extends Failed {
-        public GetFailed(ArrayList<String> errors) {
+        public GetFailed(List<String> errors) {
             super(errors);
         }
 
@@ -90,7 +92,7 @@ public class CrudMessages {
     }
 
     public static class CreationFailed extends Failed {
-        public CreationFailed(ArrayList<String> errors) {
+        public CreationFailed(List<String> errors) {
             super(errors);
         }
 
@@ -111,7 +113,7 @@ public class CrudMessages {
     }
 
     public static class UpdateFailed extends Failed {
-        public UpdateFailed(ArrayList<String> errors) {
+        public UpdateFailed(List<String> errors) {
             super(errors);
         }
 
@@ -146,7 +148,7 @@ public class CrudMessages {
     }
 
     public static class DeleteFailed extends Failed {
-        public DeleteFailed(ArrayList<String> errors) {
+        public DeleteFailed(List<String> errors) {
             super(errors);
         }
 
